[package]
name = "wasm-audio-player"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
oneshot = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"] 

[dependencies.web-sys]
version = "0.3.6"
features = [
  'console',
  'AudioContext',
  'AudioContextState',
  'AudioBufferSourceNode',
  'AudioBuffer',
  'AudioBufferSourceNode',
  'AudioDestinationNode',
  'GainNode',
  'AudioParam',
  'Window',
]
